--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                <div class="header__inner">
                   <div class="header-logo">
-                     <img src="/../img/logo.svg" alt="">
+                     <img src="img/logo.svg" alt="">
                   </div>
                   <div class="header__menu-burger">
                      <span></span>
